bug 327602 - Move VTIMEZONEs to the beginning of a VCALENDAR to make CGPro happier. r1=ctalbert, r2=mvl