calendar/libical/src/libical/icalcomponent.c
@@ -587,10 +587,14 @@ icalcomponent_add_component (icalcomponent* parent, icalcomponent* child)
 
     child->parent = parent;
 
-    pvl_push(parent->components,child);
+    /* Fix for Mozilla - bug 327602 */
+    if (child->kind != ICAL_VTIMEZONE_COMPONENT) {
+        pvl_push(parent->components, child);
+    } else {
+        /* VTIMEZONES should be first in the resulting VCALENDAR. */
+        pvl_unshift(parent->components, child);
 
-    /* If the new component is a VTIMEZONE, add it to our array. */
-    if (child->kind == ICAL_VTIMEZONE_COMPONENT) {
+    /* Add the VTIMEZONE to our array. */
 	/* FIXME: Currently we are also creating this array when loading in
 	   a builtin VTIMEZONE, when we don't need it. */
 	if (!parent->timezones)
